--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -27,6 +27,29 @@
     </div>
 
     <hr>
+    
+    <div class="container">
+      <div class="d-flex justify-content-between">
+        <div class="row">
+          <div class="col-2 d-flex align-items-center">
+            <i class="fas fa-credit-card fa-3x"></i>
+          </div>
+          <div class="col-9 d-flex align-items-center ml-2 mt-3">
+            <div class="d-flex flex-column">
+              <label for="user-name">クレジットカードの登録</label>
+              <p>クレジットカードの登録</p>
+            </div>
+          </div>
+        </div>
+        <div class="d-flex align-items-center">
+          <%= link_to mypage_register_card_users_path do %>
+            <i class="fas fa-chevron-right fa-2x"></i>
+          <% end %>
+        </div>
+      </div>
+    </div>
+ 
+    <hr>
 
     <div class="container">
       <div class="d-flex justify-content-between">
